remove controller support :))))))))))